# ccy

./: .buildinfo  .coveragerc  .dockerignore  .gitignore  .travis.yml  404.html  CHANGELOG.rst  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.rst  agile.json  clean.py  config.py  dates.html  gen_currencies.py  genindex.html  index.html  intro.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  release.py  requirements-dev.txt  requirements.txt  requirements_dev.txt  runtests.py  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  taplo.toml
.circleci/: config.yml
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
_sources/: dates.md  intro.md
ccy/: __init__.py
ccy/cli/: __init__.py  console.py
ccy/core/: country.py  currency.py  data.py  daycounter.py
ccy/data/: currency.py  ecb.py
ccy/dates/: __init__.py  converters.py  easter.py  futures.py  parser.py  period.py  relativedelta.py  utils.py
ccy/tradingcentres/: __init__.py  centres.py  holiday.py
ccy/utils/: __init__.py
currencies/: index.html
dates/: index.html
daycounters/: index.html
dev/: Dockerfile  install  install-dev.sh  install.sh  lint  requirements-dev.txt  start-jupyter
docs/: CNAME  Makefile  _config.yml  _toc.yml  changelog.md  conf.py  dates.md  daycounters.md  gen_currencies.py  index.md  make.bat  notes.md  overview.rst  release.json  trading-centres.md
docs/_build/doctrees/: changelog.doctree  currencies.doctree  environment.pickle  index.doctree  notes.doctree  overview.doctree
docs/_build/doctrees/history/: pre0.7.doctree
docs/_build/html/: .buildinfo  changelog.html  currencies.html  genindex.html  index.html  notes.html  objects.inv  overview.html  search.html  searchindex.js
docs/_build/html/history/: pre0.7.html
docs/_ext/: table.py
docs/history/: 0.7.md  pre0.7.rst
docs/source/: conf.py  currencies.rst  index.rst  overview.rst  settings.rst
docs/source/_ext/: table.py
docs/source/_templates/: layout.html  sidebarintro.html  sidebarlogo.html
search/: search_index.json
tests/: __init__.py  ccytests.py  datetests.py  tcstests.py  test_ccy.py  test_dates.py  test_dc.py  test_tcs.py  testccy.py
trading-centres/: index.html
