[tool.poetry]
name = "ccy"
version = "1.5.0"
description = "Python currencies"
authors = ["Luca Sbardella <luca@quantmind.com>"]
license = "BSD"
readme = "readme.md"
packages = [
    { include = "ccy" }
]

[tool.poetry.dependencies]
python = "^3.10,<3.14"
python-dateutil = "^2.9.0"
pycountry = "^24.6.1"
rich = {version = "^13.7.1", optional = true}
click = {version = "^8.1.7", optional = true}
pandas = {version = "^2.0.3", optional = true}


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.10.1"
pytest-cov = "^5.0.0"
mypy = "^1.5.1"
ruff = "^0.6.9"
types-python-dateutil = "^2.9.0.20241003"

[tool.poetry.extras]
cli = ["rich", "click", "pandas"]

[tool.poetry.group.book]
optional = true

[tool.poetry.group.book.dependencies]
jupyter-book = "^0.15.1"
jupyterlab = "^4.0.3"
jupytext = "^1.14.7"
ghp-import = "^2.1.0"


[tool.poetry.scripts]
ccys = "ccy.cli:ccys"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.jupytext]
formats = "ipynb,myst"

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = ["E", "F"]
line-length = 88

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "pycountry.*",
    "pandas.*",
]
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "ccy.tradingcentres.*"
ignore_errors = true
