[tool.poetry]
name = "ccy"
version = "1.7.2"
description = "Python currencies"
authors = ["Luca Sbardella <luca@quantmind.com>"]
license = "BSD"
readme = "readme.md"
packages = [
    { include = "ccy" }
]

[tool.poetry.dependencies]
python = ">=3.10"
python-dateutil = "^2.9.0"
pycountry = "^24.6.1"
rich = {version = "^13.7.1", optional = true}
click = {version = "^8.1.7", optional = true}
pandas = {version = "^2.0.3", optional = true}
holidays = {version = "^0.63", optional = true}


[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
pytest-cov = "^7.0.0"
mypy = "^1.14.1"
ruff = "^0.14.10"
types-python-dateutil = "^2.9.0.20241003"

[tool.poetry.extras]
cli = ["rich", "click", "pandas"]
holidays = ["holidays"]

[tool.poetry.group.book]
optional = true

[tool.poetry.group.book.dependencies]
jupyter-book = "^1.0.3"
jupyterlab = "^4.3.4"
jupytext = "^1.16.6"
ghp-import = "^2.1.0"


[tool.poetry.scripts]
ccys = "ccy.cli:ccys"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.jupytext]
formats = "ipynb,myst"

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = ["E", "F"]
line-length = 88

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "pycountry.*",
    "pandas.*",
]
ignore_missing_imports = true
