[project]
name = "ccy"
version = "1.8.0"
description = "Python currencies"
authors = [ { name = "Luca Sbardella", email = "luca@quantmind.com" } ]
license = { text = "BSD" }
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "python-dateutil>=2.9.0",
    "pycountry>=24.6.1",
    "typing-extensions>=4.12",
]

[project.optional-dependencies]
cli = [
    "click>=8.1.7",
    "pandas>=3.0.1",
    "rich>=13.7.1",
]
holidays = [
    "holidays>=0.93",
]

[project.scripts]
ccys = "ccy.cli:ccys"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.14.1",
    "ruff>=0.14.10",
    "types-python-dateutil>=2.9.0.20241003",
]
book = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
]

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = [ "E", "F" ]
line-length = 88

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "pycountry.*",
    "pandas.*",
]
ignore_missing_imports = true
